# cpp-playground

./: .gitmodules  CMakeLists.txt  build.sh  clean.sh  common.sh  coverage.sh  run.sh  setup.sh  test.sh
examples/: CMakeLists.txt  example1.cpp  example2.cpp
src/: CMakeLists.txt  active.h  command.h  inplace_pimpl.h  main.cpp  mylibrary.cpp  mylibrary.h  operation.h  threadinfo.cpp  threadinfo.h  unittest.cpp  websocket.cpp
src/api/: mylibrary.h
test/: CMakeLists.txt  active.test.cpp  command.test.cpp  inplace_pimpl.test.cpp  inplace_pimpl.test.h  unittest.cpp
test/utils/: copy_tracker.cpp  copy_tracker.h
